# HousePriceEstimator

./: clickhouse-init.sql  docker-compose.yml
.github/workflows/: build-and-deploy.yml
airflow/: collect_and_finetune.py
charts/housepriceestimator/: Chart.yaml  values.yaml
charts/housepriceestimator/charts/: airflow-8.7.0.tgz  clickhouse-3.1.6.tgz
charts/housepriceestimator/templates/: crenentials-secret.yaml  crenentials-secrets.yaml  geoinfo-deployment.yaml  geoinfo-service.yaml  ingress.yaml  model-server-deployment.yaml  model-server-service.yaml
cian_scrapper/: Dockerfile  pyproject.toml
cian_scrapper/cian_scrapper/: main.py
geo_info/: Dockerfile  pyproject.toml
geo_info/geo_info/: main.py  rings.json
geo_info/geo_info/scraooers/: KindergardenSchoolScrapper copy.ipynb  SuburbanTrainScrapper.ipynb  scrap_food_ymap.py  scrap_sport_ymap.py
model_server/: Dockerfile  pyproject.toml
model_server/model_server/: PricePredictor.ipynb  common.py  finetune.py  literals.py  main.py
toolbox/: Dockerfile  pyproject.toml
toolbox/toolbox/: cian_scrapper.py
web/: Dockerfile  pyproject.toml
web/web/: main.py
web/web/utils/streamlit_pills/: __init__.py
web/web/utils/streamlit_pills/frontend/: package-lock.json
web/web/utils/streamlit_pills/frontend/src/: index.tsx
web/web/utils/ymap_component/: __init__.py
web/web/utils/ymap_component/frontend/: package-lock.json  package.json
web/web/utils/ymap_component/frontend/public/: index.html  styles.css
web/web/utils/ymap_component/frontend/src/: YMapApp.js  index.js
