[tool.poetry]
name = "cian-scrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
arsenic = "^21.8"
celery = {git = "https://github.com/ShaheedHaque/celery.git", rev = "srh_feature_add_on_pools"}
flower = "^1.2.0"
celery-aio-pool = "^0.1.0rc5"
aiohttp = "^3.8.4"
httpx = "^0.24.1"
geopy = "^2.3.0"
clickhouse-driver = "^0.2.6"


[tool.poetry.group.dev.dependencies]
line-profiler = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
