[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
janus = "^1.0.0"
asyncio-pool = "^0.6.0"
celery = "4.4.7"
celery-pool-asyncio = "^0.2.0"
arsenic = "^21.8"
aio-pika = "^9.0.5"


[tool.poetry.group.dev.dependencies]
line-profiler = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
