[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
janus = "^1.0.0"
asyncio-pool = "^0.6.0"
arsenic = "^21.8"
aio-pika = "^9.0.5"
celery-aio-pool = "^0.1.0rc5"
celery = {git = "https://github.com/ShaheedHaque/celery.git", rev = "srh_feature_add_on_pools"}


[tool.poetry.group.dev.dependencies]
line-profiler = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
