[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Sergey Karatach <karatach1998@@yandex.ru>"]
readme = "README.md"
include = [
    "web/utils/ymap_component/frontend/build/**",
    "web/utils/streamlit_pills/frontend/build/**",
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
requests = "^2.28.2"
streamlit-pills = "^0.3.0"
pyecharts = "^2.0.2"
streamlit-echarts = "^0.4.0"
geopy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
